Both Compile and Run Command added